// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceCommands matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      [
        {
          "ariaLabel": "deviceCommands.command.close",
          "iconProps": {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceCommands.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      [
        {
          "ariaLabel": "deviceCommands.command.refresh",
          "iconProps": {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceCommands.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <StyledLabelBase
    className="no-pnp-content"
  >
    deviceCommands.noCommands
  </StyledLabelBase>
</Fragment>
`;

exports[`components/devices/deviceCommands matches snapshot with a commandSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      [
        {
          "ariaLabel": "deviceCommands.command.close",
          "iconProps": {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceCommands.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      [
        {
          "ariaLabel": "deviceCommands.command.refresh",
          "iconProps": {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceCommands.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <DeviceCommandsPerInterface
    commandSchemas={
      [
        {
          "commandModelDefinition": {
            "@type": "Command",
            "commandType": "synchronous",
            "description": "This command will begin blinking the LED for given time interval.",
            "name": "blink",
            "request": {
              "name": "blinkRequest",
              "schema": "long",
            },
            "response": {
              "name": "blinkResponse",
              "schema": "string",
            },
          },
          "parsedSchema": {
            "name": "blink",
            "requestSchema": {
              "definitions": {},
              "required": [],
              "title": "blinkRequest",
              "type": [
                "number",
                "null",
              ],
            },
            "responseSchema": {
              "definitions": {},
              "required": [],
              "title": "blinkResponse",
              "type": "string",
            },
          },
        },
      ]
    }
    componentName="foo"
    deviceId={null}
    invokeCommand={[Function]}
    moduleId={null}
  />
</Fragment>
`;
